--- a/Qwen-Qwen2.5-1.5B-Instruct/aitk/info.yml
+++ b/Qwen-Qwen2.5-1.5B-Instruct/aitk/info.yml
@@ -31,6 +31,8 @@ recipes:
       ep: OpenVINOExecutionProvider
       aitk:
         oliveFile: "qwen2_5/openvino/Qwen2.5-1.5B-instruct_context_ov_dynamic_sym_bkp_int8_sym_r1.json"
+        requirementsPatches:
+          - OliveNightly
     - file: "qwen2_5_trtrtx_config.json"
       device: gpu
       ep: NvTensorRTRTXExecutionProvider
